# fastapi-errors

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
fastapi_errors/: __init__.py  errors.py
tests/: test_fastapi.py
